--- a/test/.classpath
+++ b/test/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="/home/ats/Documents/works/java/workspace/jna-platform-4.5.0.jar"/>
 	<classpathentry kind="lib" path="/home/ats/Documents/works/java/workspace/jna-4.5.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/pulsar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
