--- a/pulsar/build.xml
+++ b/pulsar/build.xml
@@ -5,18 +5,18 @@
     <!--define folder properties-->
     <property name="dir.buildfile" value="."/>
     <property name="dir.workspace" value="${dir.buildfile}/.."/>
-    <property name="dir.jarfile" value="/home/ats/Documents/works/java"/>
+    <property name="dir.jarfile" value="${dir.buildfile}"/>
     <target name="create_run_jar">
         <jar destfile="${dir.jarfile}/pulsar.jar" filesetmanifest="mergewithoutmain">
             <manifest>
                 <attribute name="Main-Class" value="ats.pulsar.Pulsar"/>
                 <attribute name="Class-Path" value="."/>
             </manifest>
-            <fileset dir="${dir.buildfile}/bin"/>
-            <fileset dir="${dir.workspace}/jaudiolibs/bin"/>
-            <zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/jna-platform-4.5.0.jar"/>
-            <zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/jna-4.5.0.jar"/>
-            <zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/jaudiolibs/kawa/kawa.jar"/>
+            <fileset dir="${dir.jarfile}/bin"/>
+            <zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/pulsar-lib/lib/jna-4.5.0.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/pulsar-lib/lib/jna-platform-4.5.0.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/pulsar-lib/lib/jnajack-1.3.0.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/pulsar-lib/lib/kawa.jar"/>
         </jar>
     </target>
 </project>
