--- a/test/.classpath
+++ b/test/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/pulsar-lib"/>
 	<classpathentry kind="src" path="/pulsar"/>
+	<classpathentry kind="lib" path="bin.scheme"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
