--- a/test/.classpath
+++ b/test/.classpath
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/pulsar-lib"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/lib"/>
 	<classpathentry kind="src" path="/pulsar"/>
 	<classpathentry kind="lib" path="bin.scheme"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/jre"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/kawapad"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
