--- a/test/.classpath
+++ b/test/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="src" path="/pulsar"/>
 	<classpathentry kind="lib" path="bin.scheme"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/kawapad"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/metro"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
