partial commit Nov 26 2018

--- a/documents/makefile
+++ b/documents/makefile
@@ -1,2 +1,5 @@
-readme: readme.md
-	kawa text2list.scm < readme.txt
+readme.html: readme.md
+	pandoc -o readme.html readme.md
+
+readme.md: readme.txt
+	kawa text2list.scm < readme.txt > readme.md
