Added a webserver to it.
Add .vimrc :
    xmap <Return> :!curl -sSd "`cat`" http://localhost:8192/pulsar^M^M

then select anywhere in vim and press enter; it will execute the text as
script in Pulsar.

--- a/workspace/pulsar/.classpath
+++ b/workspace/pulsar/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="src.scheme"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/lib"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/metro"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/kawapad"/>
