--- a/workspace/lib/.classpath
+++ b/workspace/lib/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="lib/jna-4.5.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jna-platform-4.5.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jnajack-1.3.0.jar" sourcepath="src/jnajack-1.3.0.zip"/>
+	<classpathentry exported="true" kind="lib" path="lib/jnajack-1.3.0.jar" sourcepath="src.archive/jnajack-1.3.0.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/kawa.jar" sourcepath="src.archive/kawa-3.0-src.zip"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
