Fixed the failed compilation.

--- a/workspace/pulsar/build.xml
+++ b/workspace/pulsar/build.xml
@@ -9,7 +9,7 @@
     <target name="create_run_jar">
         <jar destfile="${dir.jarfile}/pulsar.jar" filesetmanifest="mergewithoutmain">
             <manifest>
-                <attribute name="Main-Class" value="pulsar.Pulsar"/>
+                <attribute name="Main-Class" value="pulsar.PulsarApplication"/>
                 <attribute name="Class-Path" value="."/>
             </manifest>
             <fileset dir="${dir.jarfile}/bin"/>
