--- a/workspace/pulsar/build.xml
+++ b/workspace/pulsar/build.xml
@@ -3,25 +3,30 @@
     <!--this file was created by Eclipse Runnable JAR Export Wizard-->
     <!--ANT 1.7 is required                                        -->
     <!--define folder properties-->
-    <property name="dir.buildfile" value="."/>
-    <property name="dir.workspace" value="${dir.buildfile}/.."/>
-    <property name="dir.jarfile" value="${dir.buildfile}"/>
+    <property name="dir.buildfile" value="." />
+    <property name="dir.workspace" value="${dir.buildfile}/.." />
+    <property name="dir.jarfile" value="${dir.buildfile}" />
     <target name="create_run_jar">
         <jar destfile="${dir.jarfile}/pulsar.jar" filesetmanifest="mergewithoutmain">
             <manifest>
-                <attribute name="Main-Class" value="pulsar.PulsarApplication"/>
-                <attribute name="Class-Path" value="."/>
+                <attribute name="Main-Class" value="pulsar.PulsarApplication" />
+                <attribute name="Class-Path" value="." />
             </manifest>
-            <fileset dir="${dir.jarfile}/bin"/>
-            <fileset dir="${dir.workspace}/lib/bin"/>
-            <zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/lib/lib/jna-4.5.0.jar"/>
-            <zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/lib/lib/jna-platform-4.5.0.jar"/>
-            <zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/lib/lib/jnajack-1.3.0.jar"/>
-            <zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/lib/lib/kawa.jar"/>
-            <fileset dir="${dir.workspace}/metro/bin"/>
-            <fileset dir="${dir.workspace}/kawapad/bin"/>
-            <fileset dir="${dir.workspace}/kawapad/bin.scheme"/>
-            <fileset dir="${dir.jarfile}/bin.scheme"/>
+            <fileset dir="${dir.jarfile}/bin" />
+            <fileset dir="${dir.workspace}/lib/bin" />
+            <zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/lib/lib/jna-4.5.0.jar" />
+            <zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/lib/lib/jna-platform-4.5.0.jar" />
+            <zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/lib/lib/jnajack-1.3.0.jar" />
+            <zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/lib/lib/kawa.jar" />
+            <fileset dir="${dir.workspace}/metro/bin" />
+            <fileset dir="${dir.workspace}/kawapad/bin" />
+            <fileset dir="${dir.workspace}/kawapad/bin.scheme" />
+            <fileset dir="${dir.jarfile}/bin.scheme" />
         </jar>
+    </target>
+    <target name="create_api_reference">
+        <java jar="pulsar.jar"  fork="true" output="readme-api.md" error="readme-api.log" >
+            <arg value="--output-reference" />
+        </java>
     </target>
 </project>
