--- a/workspace/pulsar/build.xml
+++ b/workspace/pulsar/build.xml
@@ -18,6 +18,7 @@
             <zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/lib/lib/jna-platform-4.5.0.jar" />
             <zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/lib/lib/jnajack-1.3.0.jar" />
             <zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/lib/lib/kawa.jar" />
+            <zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/lib/lib/JTattoo-1.6.11.jar" /> <!-- ADDED -->
             <fileset dir="${dir.workspace}/metro/bin" />
             <fileset dir="${dir.workspace}/kawapad/bin" />
             <fileset dir="${dir.workspace}/kawapad/bin.scheme" />
