Replaced "KawaPad" to "Kawapad" / Added the help management system to Kawapad.
- Added "--output-reference" command line to KawapadFrame.
- Replaced "KawaPad" to "Kawapad".
- The old deprecated id "KawaPane" to "Kawapad".

--- a/workspace/kawapad/build.xml
+++ b/workspace/kawapad/build.xml
@@ -19,4 +19,11 @@
             <fileset dir="${dir.jarfile}/bin.scheme"/>
         </jar>
     </target>
+            
+    <target name="create_api_reference" depends="create_run_jar" >
+        <java jar="kawapad.jar"  fork="true" output="generated-kawapad-api.md" error="generated-kawapad-api.log" >
+            <arg value="--output-reference" />
+            <arg value="kawapad-procedures" />
+        </java>
+    </target>
 </project>
