Fixed the inconnsistency of the keystroke settings. Added build-all.xml.
- Fixed the inconnsistency of the keystroke settings.
- Applied the automated keystroke setting to Pulsar which I forgot to apply.
- Added build-all.xml.
- Implemented faster syntax highlighting.

--- a/workspace/kawapad/build.xml
+++ b/workspace/kawapad/build.xml
@@ -37,5 +37,6 @@
             <file file="generated/generated-kawapad-keystrokes.md" />
         </concat>
     </target>
-
+    <target name="build_all" depends="concat_api_reference">
+    </target>
 </project>
