--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-leap-day
+title: Lambda Music Sequencer
+description: A programmable music sequencer; write Scheme and make music on the fly with JACKAudio.
