moved Application classes to `lamu` project

--- a/workspace/lamu/.classpath
+++ b/workspace/lamu/.classpath
@@ -2,5 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/lib"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/kawapad"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/metro"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/pulsar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
