--- a/workspace/kawapad/build.xml
+++ b/workspace/kawapad/build.xml
@@ -1,46 +1,95 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project default="create_run_jar" name="Create Runnable Jar for Project kawapad">
-    <!--this file was created by Eclipse Runnable JAR Export Wizard-->
-    <!--ANT 1.7 is required                                        -->
-    <!--define folder properties-->
-    <property name="dir.buildfile" value="."/>
-    <property name="dir.workspace" value="${dir.buildfile}/.."/>
-    <property name="dir.jarfile" value="${dir.buildfile}"/>
-    <property name="file.pulsar.version" value="${dir.workspace}/pulsar/src/pulsar/version.txt" />
-    <property name="file.kawapad.version" value="${dir.workspace}/kawapad/src/kawapad/version.txt" />
-    <target name="create_run_jar">
-        <jar destfile="${dir.jarfile}/kawapad.jar" filesetmanifest="mergewithoutmain">
-            <manifest>
-                <attribute name="Main-Class" value="kawapad.KawapadFrame"/>
-                <attribute name="Class-Path" value="."/>
-            </manifest>
-            <fileset dir="${dir.jarfile}/bin"/>
-            <fileset dir="${dir.workspace}/lib/bin"/>
-            <zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/lib/lib/kawa.jar"/>
-            <zipfileset excludes="META-INF/*.SF" src="${dir.workspace}/lib/lib/JTattoo-1.6.11.jar" /> <!-- ADDED -->
-            <fileset dir="${dir.jarfile}/bin.scheme"/>
-            <fileset file="${file.kawapad.version}" />
-        </jar>
+<!-- WARNING: Eclipse auto-generated file.
+              Any modifications will be overwritten.
+              To include a user specific buildfile here, simply create one in the same
+              directory with the processing instruction <?eclipse.ant.import?>
+              as the first entry and export the buildfile again. --><project basedir="." default="build" name="kawapad">
+    <property environment="env"/>
+    <property name="lamu.location" value="../lamu"/>
+    <property name="pulsar.location" value="../pulsar"/>
+    <property name="ECLIPSE_HOME" value="../../../../../../../../../../../../home/ats/eclipse/java-oxygen2/eclipse/"/>
+    <property name="lib.location" value="../lib"/>
+    <property name="debuglevel" value="source,lines,vars"/>
+    <property name="target" value="1.8"/>
+    <property name="source" value="1.8"/>
+    <path id="lib.classpath">
+        <pathelement location="${lib.location}/bin"/>
+        <pathelement location="${lib.location}/lib/jna-4.5.0.jar"/>
+        <pathelement location="${lib.location}/lib/jna-platform-4.5.0.jar"/>
+        <pathelement location="${lib.location}/lib/jnajack-1.3.0.jar"/>
+        <pathelement location="${lib.location}/lib/kawa.jar"/>
+        <pathelement location="${lib.location}/lib/JTattoo-1.6.11.jar"/>
+    </path>
+    <path id="kawapad.classpath">
+        <pathelement location="bin"/>
+        <path refid="lib.classpath"/>
+    </path>
+    <path id="run.KawapadFrame.classpath">
+        <path refid="kawapad.classpath"/>
+    </path>
+    <path id="run.KawapadFrame.bootclasspath"/>
+    <target name="init">
+        <mkdir dir="bin"/>
+        <copy includeemptydirs="false" todir="bin">
+            <fileset dir="src">
+                <exclude name="**/*.java"/>
+            </fileset>
+        </copy>
     </target>
-            
-    <target name="create_api_reference" depends="create_run_jar" >
-        <mkdir dir="generated"/>
-        <java jar="kawapad.jar"  fork="true" output="generated/generated-kawapad-api.md" error="generated/generated-kawapad-api.log" >
-            <arg value="--output-reference" />
-            <arg value="kawapad-procedures" />
+    <target name="clean">
+        <delete dir="bin"/>
+    </target>
+    <target depends="clean" name="cleanall">
+        <ant antfile="build.xml" dir="${lib.location}" inheritAll="false" target="clean"/>
+    </target>
+    <target depends="build-subprojects,build-project" name="build"/>
+    <target name="build-subprojects">
+        <ant antfile="build.xml" dir="${lib.location}" inheritAll="false" target="build-project">
+            <propertyset>
+                <propertyref name="build.compiler"/>
+            </propertyset>
+        </ant>
+    </target>
+    <target depends="init" name="build-project">
+        <echo message="${ant.project.name}: ${ant.file}"/>
+        <javac debug="true" debuglevel="${debuglevel}" destdir="bin" includeantruntime="false" source="${source}" target="${target}">
+            <src path="src"/>
+            <classpath refid="kawapad.classpath"/>
+        </javac>
+    </target>
+    <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects">
+        <ant antfile="build.xml" dir="${lamu.location}" inheritAll="false" target="clean"/>
+        <ant antfile="build.xml" dir="${lamu.location}" inheritAll="false" target="build">
+            <propertyset>
+                <propertyref name="build.compiler"/>
+            </propertyset>
+        </ant>
+        <ant antfile="build.xml" dir="${pulsar.location}" inheritAll="false" target="clean"/>
+        <ant antfile="build.xml" dir="${pulsar.location}" inheritAll="false" target="build">
+            <propertyset>
+                <propertyref name="build.compiler"/>
+            </propertyset>
+        </ant>
+    </target>
+    <target description="copy Eclipse compiler jars to ant lib directory" name="init-eclipse-compiler">
+        <copy todir="${ant.library.dir}">
+            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
+        </copy>
+        <unzip dest="${ant.library.dir}">
+            <patternset includes="jdtCompilerAdapter.jar"/>
+            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
+        </unzip>
+    </target>
+    <target description="compile project with Eclipse compiler" name="build-eclipse-compiler">
+        <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
+        <antcall target="build"/>
+    </target>
+    <target name="KawapadFrame">
+        <java classname="kawapad.KawapadFrame" failonerror="true" fork="yes">
+            <classpath refid="run.KawapadFrame.classpath"/>
+            <bootclasspath>
+                <path refid="run.KawapadFrame.bootclasspath"/>
+            </bootclasspath>
         </java>
-        <java jar="kawapad.jar"  fork="true" output="generated/generated-kawapad-keystrokes.md" error="generated/generated-kawapad-keystrokes.log" >
-            <arg value="--output-keystroke-reference" />
-        </java>
-    </target>
-    
-    <target name="concat_api_reference" depends="create_api_reference" >
-        <concat destfile="readme.md"  >
-            <file file="manual-readme.md" />
-            <file file="generated/generated-kawapad-api.md" />
-            <file file="generated/generated-kawapad-keystrokes.md" />
-        </concat>
-    </target>
-    <target name="build_all" depends="concat_api_reference">
     </target>
 </project>
