--- a/workspace/lamu/.classpath
+++ b/workspace/lamu/.classpath
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/lib"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/kawapad"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/metro"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/pulsar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/lib"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/kawapad"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/metro"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/pulsar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
