reorganized the build system, again to fix the problem
The last commit is building in an improper way; attempted to fix it.

--- a/workspace/lib/build.xml
+++ b/workspace/lib/build.xml
@@ -9,7 +9,6 @@
     <property name="lamu.location" value="../lamu"/>
     <property name="metro.location" value="../metro"/>
     <property name="pulsar.location" value="../pulsar"/>
-    <property name="ECLIPSE_HOME" value="../../../../../../../../../../../../home/ats/eclipse/java-oxygen2/eclipse/"/>
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.8"/>
     <property name="source" value="1.8"/>
@@ -25,6 +24,7 @@
         <mkdir dir="bin"/>
         <copy includeemptydirs="false" todir="bin">
             <fileset dir="src">
+                <exclude name="**/*.launch"/>
                 <exclude name="**/*.java"/>
             </fileset>
         </copy>
@@ -44,51 +44,12 @@
     </target>
     <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects">
         <ant antfile="build.xml" dir="${kawapad.location}" inheritAll="false" target="clean"/>
-        <ant antfile="build.xml" dir="${kawapad.location}" inheritAll="false" target="build">
-            <propertyset>
-                <propertyref name="build.compiler"/>
-            </propertyset>
-        </ant>
+        <ant antfile="build.xml" dir="${kawapad.location}" inheritAll="false" target="build"/>
         <ant antfile="build.xml" dir="${lamu.location}" inheritAll="false" target="clean"/>
-        <ant antfile="build.xml" dir="${lamu.location}" inheritAll="false" target="build">
-            <propertyset>
-                <propertyref name="build.compiler"/>
-            </propertyset>
-        </ant>
+        <ant antfile="build.xml" dir="${lamu.location}" inheritAll="false" target="build"/>
         <ant antfile="build.xml" dir="${metro.location}" inheritAll="false" target="clean"/>
-        <ant antfile="build.xml" dir="${metro.location}" inheritAll="false" target="build">
-            <propertyset>
-                <propertyref name="build.compiler"/>
-            </propertyset>
-        </ant>
+        <ant antfile="build.xml" dir="${metro.location}" inheritAll="false" target="build"/>
         <ant antfile="build.xml" dir="${pulsar.location}" inheritAll="false" target="clean"/>
-        <ant antfile="build.xml" dir="${pulsar.location}" inheritAll="false" target="build">
-            <propertyset>
-                <propertyref name="build.compiler"/>
-            </propertyset>
-        </ant>
-    </target>
-    <target description="copy Eclipse compiler jars to ant lib directory" name="init-eclipse-compiler">
-        <copy todir="${ant.library.dir}">
-            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
-        </copy>
-        <unzip dest="${ant.library.dir}">
-            <patternset includes="jdtCompilerAdapter.jar"/>
-            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
-        </unzip>
-    </target>
-    <target description="compile project with Eclipse compiler" name="build-eclipse-compiler">
-        <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
-        <antcall target="build"/>
-    </target>
-    <target name="MarkdownDescriptive">
-        <java classname="lamu.lib.scheme.doc.MarkdownDescriptive" failonerror="true" fork="yes">
-            <classpath refid="lib.classpath"/>
-        </java>
-    </target>
-    <target name="SimpleConsole">
-        <java classname="lamu.lib.log.SimpleConsole" failonerror="true" fork="yes">
-            <classpath refid="lib.classpath"/>
-        </java>
+        <ant antfile="build.xml" dir="${pulsar.location}" inheritAll="false" target="build"/>
     </target>
 </project>
