--- a/workspace/lamu/build.xml
+++ b/workspace/lamu/build.xml
@@ -1,18 +1,77 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project default="build" name="Create Runnable Jar for Project pulsar">
-    <tstamp>
-        <format property="BUILD_DATE" pattern="yyyyMMdd-HHmmss"  locale="en,UK" />
-    </tstamp>
-    <property name="dir.buildfile" value="." />
-    <property name="dir.workspace" value="${dir.buildfile}/.." />
-    <property name="file.pulsar.version" value="${dir.workspace}/pulsar/src/pulsar/version.txt" />
-    <property name="file.kawapad.version" value="${dir.workspace}/kawapad/src/kawapad/version.txt" />
-    <echo message="${BUILD_DATE}" file="${file.kawapad.version}" />
-    <echo message="${BUILD_DATE}" file="${file.pulsar.version}" />
-
-    <target name="build" >
-        <ant antfile="./build-bin.xml" target="clean" dir="." />
-        <ant antfile="./build-bin.xml" target="build" dir="." />
-        <ant antfile="./build-jar.xml" target="build" dir="." />
+<!-- WARNING: Eclipse auto-generated file.
+              Any modifications will be overwritten.
+              To include a user specific buildfile here, simply create one in the same
+              directory with the processing instruction <?eclipse.ant.import?>
+              as the first entry and export the buildfile again. --><project basedir="." default="build" name="lamu">
+    <property environment="env"/>
+    <property name="lib.location" value="../lib"/>
+    <property name="kawapad.location" value="../kawapad"/>
+    <property name="metro.location" value="../metro"/>
+    <property name="pulsar.location" value="../pulsar"/>
+    <property name="debuglevel" value="source,lines,vars"/>
+    <property name="target" value="1.8"/>
+    <property name="source" value="1.8"/>
+    <path id="lib.classpath">
+        <pathelement location="${lib.location}/bin"/>
+        <pathelement location="${lib.location}/lib/jna-4.5.0.jar"/>
+        <pathelement location="${lib.location}/lib/jna-platform-4.5.0.jar"/>
+        <pathelement location="${lib.location}/lib/jnajack-1.3.0.jar"/>
+        <pathelement location="${lib.location}/lib/kawa.jar"/>
+        <pathelement location="${lib.location}/lib/JTattoo-1.6.11.jar"/>
+    </path>
+    <path id="kawapad.classpath">
+        <pathelement location="${kawapad.location}/bin"/>
+        <path refid="lib.classpath"/>
+    </path>
+    <path id="metro.classpath">
+        <pathelement location="${metro.location}/bin"/>
+        <path refid="lib.classpath"/>
+    </path>
+    <path id="pulsar.classpath">
+        <pathelement location="${pulsar.location}/bin"/>
+        <path refid="lib.classpath"/>
+        <path refid="metro.classpath"/>
+        <path refid="kawapad.classpath"/>
+    </path>
+    <path id="lamu.classpath">
+        <pathelement location="bin"/>
+        <path refid="lib.classpath"/>
+        <path refid="kawapad.classpath"/>
+        <path refid="metro.classpath"/>
+        <path refid="pulsar.classpath"/>
+    </path>
+    <target name="init">
+        <mkdir dir="bin"/>
+        <copy includeemptydirs="false" todir="bin">
+            <fileset dir="src">
+                <exclude name="**/*.launch"/>
+                <exclude name="**/*.java"/>
+            </fileset>
+        </copy>
     </target>
+    <target name="clean">
+        <delete dir="bin"/>
+    </target>
+    <target depends="clean" name="cleanall">
+        <ant antfile="build.xml" dir="${lib.location}" inheritAll="false" target="clean"/>
+        <ant antfile="build.xml" dir="${kawapad.location}" inheritAll="false" target="clean"/>
+        <ant antfile="build.xml" dir="${metro.location}" inheritAll="false" target="clean"/>
+        <ant antfile="build.xml" dir="${pulsar.location}" inheritAll="false" target="clean"/>
+    </target>
+    <target depends="build-subprojects,build-project" name="build"/>
+    <target name="build-subprojects">
+        <ant antfile="build.xml" dir="${lib.location}" inheritAll="false" target="build-project"/>
+        <ant antfile="build.xml" dir="${kawapad.location}" inheritAll="false" target="build-project"/>
+        <ant antfile="build.xml" dir="${metro.location}" inheritAll="false" target="build-project"/>
+        <ant antfile="build.xml" dir="${pulsar.location}" inheritAll="false" target="build-project"/>
+    </target>
+    <target depends="init" name="build-project">
+        <echo message="${ant.project.name}: ${ant.file}"/>
+        <javac debug="true" debuglevel="${debuglevel}" destdir="bin" includeantruntime="false" source="${source}" target="${target}">
+            <src path="src"/>
+            <classpath refid="lamu.classpath"/>
+        </javac>
+    </target>
+    <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>
 </project>
