--- a/workspace/lib/.classpath
+++ b/workspace/lib/.classpath
@@ -5,7 +5,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/jna-platform-4.5.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jnajack-1.3.0.jar" sourcepath="src.archive/jnajack-1.3.0.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/kawa.jar" sourcepath="src.archive/kawa-3.0-src.zip"/>
+	<classpathentry exported="true" kind="lib" path="lib/JTattoo-1.6.11.jar"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/JTattoo-1.6.11.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
