--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-leap-day
-title: Lambda Music Sequencer
-description: A programmable music sequencer; write Scheme and make music on the fly with JACKAudio.
+title: Lambda Programmable Music Sequencer
+description: Write Scheme and make music on-the-fly with JACKAudio.
