--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-cayman
 title: Lambda Programmable Music Sequencer
 description: Write Scheme and make music on-the-fly with JACKAudio.
-show_downloads: true
+show_downloads: false
 google_analytics: UA-159323195-3
 github:
   zip_url: https://github.com/lambda-music/lamu/raw/master/workspace/build/lamu.jar
