--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,5 @@ show_downloads: false
 google_analytics: UA-159323195-3
 github:
   zip_url: https://github.com/lambda-music/lamu/raw/master/workspace/build/lamu.jar
+  jar_url: https://github.com/lambda-music/lamu/raw/master/workspace/build/lamu.jar
   another_url: https://github.com/lambda-music/lamu/blob/master/workspace/build/lamu.jar
