--- a/workspace/lamu/logging.properties
+++ b/workspace/lamu/logging.properties
@@ -1,5 +1,5 @@
 handlers = java.util.logging.ConsoleHandler
-.level = INFO
+.level = SEVERE
 java.util.logging.ConsoleHandler.level = INFO
 java.util.logging.ConsoleHandler.formatter = lamu.lib.log.LogFormatter
 # java.util.logging.SimpleFormatter.format=[%1$tF %1$tT] [%4$-7s] %5$s %n
