--- a/workspace/lib/.classpath
+++ b/workspace/lib/.classpath
@@ -7,6 +7,8 @@
 	<classpathentry kind="src" path="src.help"/>
 	<classpathentry kind="src" path="src.action-help"/>
 	<classpathentry kind="src" path="src.gui-utils"/>
+	<classpathentry kind="src" path="src.thread-initializers"/>
+	<classpathentry kind="src" path="src.thread-current"/>
 	<classpathentry exported="true" kind="lib" path="lib/jna-4.5.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jna-platform-4.5.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jnajack-1.3.0.jar" sourcepath="src.archive/jnajack-1.3.0.zip"/>
